--- a/Tutorial/HTML_CSS_JS/index.html
+++ b/Tutorial/HTML_CSS_JS/index.html
@@ -6,15 +6,15 @@
     </head>
     <body>
         <h1 class = "heading-class">I am learning HTML</h1>
-        <p>we have understood multiple things in html</p>
+        <p id = "para1">we have understood multiple things in html</p>
         <hr>
        
         <h1 class = "heading-class">I am learning CSS</h1>
-        <p>we have understood multiple things in css</p>
+        <p id = "para2">we have understood multiple things in css</p>
         <hr>
        
         <h1 class = "heading-class">I am learning JavaScript</h1>
-        <p>we have understood multiple things in JavaScript</p>
+        <p id = "para3">we have understood multiple things in JavaScript</p>
     </body>
     <!-- css or Style, -->
     <!-- write CSS -->
